GameSummary now contains the plays of each player. [WIP]